<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odrive_ros2_control_example</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="alexander@minor.pw">Alexander Minor</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <!-- <exec_depend>geometry_msgs</exec_depend> -->
  <exec_depend>robot_state_publisher</exec_depend>
  <!-- <exec_depend>ros_gz_bridge</exec_depend> -->
  <!-- <exec_depend>ros_gz_sim</exec_depend> -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>ros2_control_cmake</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <!-- <exec_depend>gz_ros2_control</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
